kubernetes.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth-server
---
#apiVersion: v1
#kind: Secret
#type: kubernetes.io/tls
#metadata:
#  name: authserver.35.202.15.36.nip.io-tls
#  namespace: auth-server
#  labels:
#    certmanager.k8s.io/certificate-name: authserver.35.202.15.36.nip.io-tls
#  annotations:
#    certmanager.k8s.io/alt-names: authserver.35.202.15.36.nip.io
#    certmanager.k8s.io/common-name: authserver.35.202.15.36.nip.io
#    certmanager.k8s.io/issuer-kind: ClusterIssuer
#    certmanager.k8s.io/issuer-name: letsencrypt-prod
#data:
#  tls.crt: ""
#  tls.key: ""
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authserver
  namespace: auth-server
  labels:
    app: authserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authserver
  template:
    metadata:
      labels:
        app: authserver
        release: authserver
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: authserver
          image: docker-registry.35.202.15.36.nip.io/go-auth
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authserver
  namespace: auth-server
  labels:
    app: authserver
    release: authserver
spec:
  selector:
    app: authserver
    release: authserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: authserver
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authserver
  namespace: auth-server
  labels:
    app: authserver
    release: authserver
  annotations:
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - auth-server.35.202.15.36.nip.io
      secretName: auth-server.35.202.15.36.nip.io-tls
  rules:
    - host: auth-server.35.202.15.36.nip.io
      http:
        paths:
          - backend:
              serviceName: authserver
              servicePort: 80
            path: /
---
